# OCaml-Examples

./: README.md  dune-project
Codewars-Katas/abbreviate_name/: dune-project
Codewars-Katas/abbreviate_name/lib/: dune
Codewars-Katas/abbreviate_name/test/: dune
Codewars-Katas/build_a_square/: dune-project
Codewars-Katas/build_a_square/lib/: dune
Codewars-Katas/build_a_square/test/: dune
Codewars-Katas/check_for_factor/: dune-project
Codewars-Katas/check_for_factor/lib/: dune
Codewars-Katas/check_for_factor/test/: dune
Codewars-Katas/deodorant_evaporator/: dune-project
Codewars-Katas/deodorant_evaporator/lib/: dune
Codewars-Katas/deodorant_evaporator/test/: dune
Codewars-Katas/easy_wallpaper/: dune-project
Codewars-Katas/expressions_matter/: dune-project
Codewars-Katas/expressions_matter/lib/: dune
Codewars-Katas/expressions_matter/test/: dune
Codewars-Katas/find_multiples/: dune-project
Codewars-Katas/heros_root/: dune-project
Codewars-Katas/is_palindrome/: dune-project
Codewars-Katas/maximum_length_difference/: dune-project
Codewars-Katas/opposite_number/: dune-project
Codewars-Katas/powers_of_two/: dune-project
Codewars-Katas/reduce_but_grow/: dune-project
Codewars-Katas/returning_strings/: dune-project
Codewars-Katas/sort_by_area/: dune-project
Codewars-Katas/sum_of_angles/: dune-project
Codewars-Katas/sum_of_positive/: dune-project
Codewars-Katas/summation/: dune-project
Codewars-Katas/summation/lib/: dune
Codewars-Katas/summation/test/: dune
Codewars-Katas/two_to_one/: dune-project
Codewars-Katas/volume_of_a_cuboid/: dune-project
Codewars-Katas/volume_of_a_cuboid/lib/: dune
Codewars-Katas/volume_of_a_cuboid/test/: dune
Codewars-Katas/wilson_primes/: dune-project
Ocaml/fizz_buzz/: dune-project
Ocaml/fizz_buzz/_build/: log
Ocaml/fizzbuzz/: fizzbuzz.ml
Ocaml/hello/: dune-project  hello.ml
cli_args_demo/: dune-project
cli_args_demo/lib/: dune
cli_args_demo/test/: dune
expr_eval/: dune-project
expr_eval/lib/: utils.ml
expr_eval/test/: dune
factorial/: dune-project
factorial/lib/: dune
factorial/test/: dune
file_read_demo/: dune-project  example.txt
file_read_demo/lib/: dune
file_read_demo/test/: dune
file_write_demo/: dune-project
file_write_demo/lib/: dune
file_write_demo/test/: dune
fizz_buzz/_build/: log
fizz_buzz/lib/: dune
guess_a_number/: dune-project
guess_a_number/lib/: dune
guess_a_number/test/: dune
hello/_build/: log
http_server/: dune-project  http_server.opam  index.html
http_server/lib/: dune
http_server/test/: dune
import_demo/: dune-project
import_demo/lib/: dune
import_demo/test/: dune
key_value_pair_thing/: README.md
key_value_pair_thing/kvpt/: dune-project
mutable_record_demo/: dune-project
mutable_record_demo/lib/: dune
mutable_record_demo/test/: dune
nth_prime/: dune-project
nth_prime/lib/: dune
nth_prime/test/: dune
sexpr_eval/: dune-project
sexpr_eval/lib/: dune
sexpr_eval/test/: dune
shunting_yard/: dune-project  shunting_yard.opam
shunting_yard/lib/: dune
shunting_yard/test/: dune
sqlite_todos/: sqlite_todos.opam  todos.db
sqlite_todos/lib/: dune
test/: dune
utils/: dune-project  utils.opam
utils/lib/: dune  utils.ml
utils/test/: dune
yahtzee/: README.md  dune-project  yahtzee.opam
yahtzee/lib/: dune
yahtzee/test/: dune
(+43 files in other folders)
