(lang dune 3.10)

(name shunting_yard)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name shunting_yard)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune str)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
